SERVER-78851 movePrimary may fail on clone phase if out runs concurrently